src/styles/Home.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;

  background-color: #1b255f;
  font-family: "Montserrat", sans-serif;
  color: white;
}

.hero {
  display: flex;
  justify-content: space-between;
  background-color: #1b255f;

  width: 100%;
  min-height: 100vh;
  height: 100vh;
  overflow: hidden;
}

.hero-left {
  flex: 0 0 40%; /* Makes the left side slightly slimmer than the right */
  display: flex;
  flex-direction: column;
  justify-content: center; /* This centers all your content vertically! */
  gap: 24px; /* Slightly more space between elements */
  background-color: #262f6d;
  padding: 60px; /* Big padding makes it look professional */
  height: 100%;
}

.hero-right {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;

  /* The stars go on the container */
  background-image: url("../assets/stars-bg-hero.png");
  background-repeat: repeat;
  background-position: center;
  background-color: #1b255f;
}

.hero-title {
  display: flex;
  gap: 12px;

  font-weight: 700;
  font-size: 24px;
  color: #ff42ab;
}

.hero-user {
  font-size: 50px;
  font-weight: 700;

  margin-left: 6px;
}

.hero-input {
  display: flex;
  flex-direction: column;
  gap: 16px;

  font-size: 20px;
}

.hero-input input {
  max-width: 400px;

  padding: 15px 20px;

  color: white;

  border: 3px solid #445dff;
  border-radius: 20px;

  background-color: #10184a;
  box-shadow: 0 4px 6px #10184a;

  transition:
    transform 0.2s ease,
    box-shadow 0.2s ease;
}

.hero-input input:focus {
  transform: scale(1.05);
  outline: none;
  box-shadow: 0 0 10px #445dff;
}

.hero-input input::placeholder {
  font-size: 16px;
}

/* Button */

.btn {
  align-self: center;

  max-width: 50%;

  border-radius: 16px;

  background-color: #ff42ab;
  color: #1b255f;

  font-weight: 700;
  font-size: 20px;

  padding: 20px 50px;

  cursor: pointer;

  background: linear-gradient(to right, #ff42ab 50%, white 50%);

  background-size: 200% 100%;

  background-position: right bottom;

  transition: all 0.4s ease-out;

  color: #1b255f;
}

.btn:hover {
  background-position: left bottom;

  transform: translateY(-3px);
  box-shadow: 0 10px 20px #1b255f;
}

button {
  border: none;
}

.btn-text {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 12px;
}

/* Hero Girl */
.hero-character {
  width: 70%; /* Adjust this to make the girl bigger or smaller */
  height: auto;
  object-fit: contain;
}

/* Dividers */
.divider {
  display: flex;
  align-items: center;
  width: 100%; /* Take up the full width of the left container */
  margin: 20px 0; /* Vertical space only */
}

.divider-line {
  flex: 1;
  height: 1px;
  background-color: #ff42ab;
}

.divider img {
  margin-left: 20px;
  margin-right: 20px;
  width: 30px;
}

